--- a/Exercise-12/compose.yml
+++ b/Exercise-12/compose.yml
@@ -17,9 +17,12 @@ services:
     restart: ${RESTART_POLICY}
     volumes:
       - "nexus_data:/nexus-data"
-    # ports:
-    #   - "8081:8081"
-    #   - "8085:8085"
+    ports:
+      - "8081:8081"
+      - "8085:8085"
+      - "8083:8083"
+      - "8082:8082"
+      - "8084:8084"
     networks:
       - web_net
     labels:
@@ -58,3 +61,25 @@ services:
       - traefik.http.routers.registry-secure.service=hubdocker-secure
       - traefik.http.routers.registry-secure.tls.certresolver=mycert
       - traefik.http.services.registry-secure.loadbalancer.server.port=8083
+      - traefik.http.routers.quay.entrypoints=http
+      - traefik.http.routers.quay.rule=Host(`${QUAY_SUB_DOMAIN}.${DOMAIN_ADDRESS}`)
+      - traefik.http.routers.quay.middlewares=https-redirect
+      - traefik.http.routers.quay-secure.entrypoints=https
+      - traefik.http.routers.quay.service=hubdocker-secure
+      - traefik.http.routers.quay-secure.rule=Host(`${QUAY_SUB_DOMAIN}.${DOMAIN_ADDRESS}`)
+      - traefik.http.routers.quay-secure.tls=true
+      - traefik.http.routers.quay-secure.tls.options=default
+      - traefik.http.routers.quay-secure.service=hubdocker-secure
+      - traefik.http.routers.quay-secure.tls.certresolver=mycert
+      - traefik.http.services.quay-secure.loadbalancer.server.port=8084
+      - traefik.http.routers.k8s.entrypoints=http
+      - traefik.http.routers.k8s.rule=Host(`${K8S_SUB_DOMAIN}.${DOMAIN_ADDRESS}`)
+      - traefik.http.routers.k8s.middlewares=https-redirect
+      - traefik.http.routers.k8s-secure.entrypoints=https
+      - traefik.http.routers.k8s.service=hubdocker-secure
+      - traefik.http.routers.k8s-secure.rule=Host(`${K8S_SUB_DOMAIN}.${DOMAIN_ADDRESS}`)
+      - traefik.http.routers.k8s-secure.tls=true
+      - traefik.http.routers.k8s-secure.tls.options=default
+      - traefik.http.routers.k8s-secure.service=hubdocker-secure
+      - traefik.http.routers.k8s-secure.tls.certresolver=mycert
+      - traefik.http.services.k8s-secure.loadbalancer.server.port=8085
