--- a/Exercise-9/inventory/group_vars/all/preparing.yaml
+++ b/Exercise-9/inventory/group_vars/all/preparing.yaml
@@ -1,3 +1,14 @@
+# debian mirror repository
+mirror_apt_active: true
+mirror_domain_name: 172.16.20.146:8081
+
+#debian apt proxy set
+# apt_proxy_active: true
+# apt_proxy_address:
+# apt_proxy_port: 8123
+
+
+
 # basic package list for installation
 packages:
 - sysstat
