--- a/Exercise-9/inventory/host.yaml
+++ b/Exercise-9/inventory/host.yaml
@@ -6,6 +6,7 @@ all:
           ansible_host: 172.16.20.146
           ansible_user: root
           ansible_port: 8090
-
-# [all]
-# 172.16.20.146
+        elk-server:
+          ansible_host: 172.16.20.148
+          ansible_user: root
+          ansible_port: 8090
