--- a/Exercise-9/inventory/host.yaml
+++ b/Exercise-9/inventory/host.yaml
@@ -1,12 +1,15 @@
 all:
   children:
-    repo-servers:
+    mecan-servers:
+      vars:
+          ansible_user: root
+          ansible_port: 8090
       hosts:
         repo-server:
           ansible_host: 172.16.20.146
-          ansible_user: root
-          ansible_port: 8090
         elk-server:
           ansible_host: 172.16.20.148
-          ansible_user: root
-          ansible_port: 8090
+        foo-server:
+          ansible_host: 172.16.20.149
+        bar-server:
+          ansible_host: 172.16.20.150
