--- a/Exercise-9/inventory/host.yaml
+++ b/Exercise-9/inventory/host.yaml
@@ -13,3 +13,5 @@ all:
           ansible_host: 172.16.20.149
         bar-server:
           ansible_host: 172.16.20.150
+	monlog-server:
+          ansible_host: 172.16.20.151
