--- a/Exercise-14/prometheus-stack/prometheus/prometheus.yml
+++ b/Exercise-14/prometheus-stack/prometheus/prometheus.yml
@@ -33,6 +33,8 @@ scrape_configs:
         - "172.16.20.151:8080"
         - "172.16.20.149:8080"
         - "172.16.20.150:8080"
+        - "172.16.20.146:8080"
+        - "172.16.20.152:8080"
     scheme: "http"
     basic_auth:
       username: 'mecan'
@@ -44,6 +46,8 @@ scrape_configs:
         - "172.16.20.151:9100"
         - "172.16.20.149:9100"
         - "172.16.20.150:9100"
+        - "172.16.20.146:8080"
+        - "172.16.20.152:8080"
     scheme: "http"
     basic_auth:
       username: 'mecan'
@@ -99,3 +103,52 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['traefik:8082']
+  
+  - job_name: 'gitlab-ci-pipelines-exporter'
+    scrape_interval: 10s
+    scrape_timeout: 5s
+    static_configs:
+      - targets: ['gitlab-ci-pipelines-exporter:8080']
+
+  - job_name: gitlab-redis
+    static_configs:
+      - targets:
+        - 172.16.20.152:9121
+    scheme: "http"
+    basic_auth:
+      username: 'mecan'
+      password: 'L3Wkwcufc3xhsE5eomtoUaKTLRIdV0'
+
+
+
+
+  - job_name: gitlab-postgres
+    static_configs:
+      - targets:
+        - 172.16.20.152:9187
+    scheme: "http"
+    basic_auth:
+      username: 'mecan'
+      password: 'L3Wkwcufc3xhsE5eomtoUaKTLRIdV0'
+
+
+  - job_name: gitlab_exporter_database
+    metrics_path: "/database"
+    static_configs:
+      - targets:
+        - 172.16.20.152:9168
+    scheme: "http"
+    basic_auth:
+      username: 'mecan'
+      password: 'L3Wkwcufc3xhsE5eomtoUaKTLRIdV0'
+
+    
+  - job_name: gitlab_exporter_sidekiq
+    metrics_path: "/sidekiq"
+    static_configs:
+      - targets:
+        - 172.16.20.152:9168
+    scheme: "http"
+    basic_auth:
+      username: 'mecan'
+      password: 'L3Wkwcufc3xhsE5eomtoUaKTLRIdV0'
